--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -27,6 +27,8 @@
       href: learn/automation-tutorial-runbook-textual.md
     - name: Python Runbook を作成する
       href: learn/automation-tutorial-runbook-textual-python2.md
+    - name: Python 3 Runbook を作成する
+      href: learn/automation-tutorial-runbook-textual-python-3.md
 - name: 概念
   items:
     - name: Automation アカウントの認証の概要
@@ -96,6 +98,8 @@
           href: shared-resources/variables.md
         - name: Python 2 パッケージの管理
           href: python-packages.md
+        - name: Python 3 パッケージの管理
+          href: python-3-packages.md
         - name: 共有リソースのトラブルシューティング
           href: troubleshoot/shared-resources.md
     - name: プロセスの自動化
