--- a/articles/azure-maps/index.yml
+++ b/articles/azure-maps/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: anastasia-ms
   ms.author: v-stharr
   ms.date: 1/15/2020
-  ms.openlocfilehash: fa4db97e2aefe48e792f7d43dbb782e7a0967716
-  ms.sourcegitcommit: 80c1056113a9d65b6db69c06ca79fa531b9e3a00
+  ms.openlocfilehash: 17113e3a2564ed56ecbcf8e34de27c4fe398ce03
+  ms.sourcegitcommit: 66b0caafd915544f1c658c131eaf4695daba74c8
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/09/2020
-  ms.locfileid: "96905266"
+  ms.lasthandoff: 12/18/2020
+  ms.locfileid: "97680673"
 landingContent:
 - title: Azure Maps について
   linkLists:
@@ -40,6 +40,8 @@ landingContent:
     links:
     - text: Azure Maps を使用して Web アプリケーションを作成する
       url: quick-demo-map-app.md
+    - text: Azure Maps を使用して Android アプリを作成する
+      url: quick-android-map.md
   - linkListType: concept
     links:
     - text: Maps アカウントの適切な価格レベルを選択する
@@ -130,12 +132,26 @@ landingContent:
       url: /javascript/api/azure-maps-spatial-io/
 - title: Android SDK を使用した開発
   linkLists:
+  - linkListType: tutorial
+    links:
+    - text: GeoJSON データをマップに読み込む
+      url: tutorial-load-geojson-file-android.md
   - linkListType: how-to-guide
     links:
     - text: Android マップ コントロールの概要
       url: how-to-use-android-map-control-library.md
-    - text: 機能のメタデータ情報を表示する
-      url: display-feature-information-android.md
+    - text: データ ソースを作成する
+      url: create-data-source-android-sdk.md
+    - text: バブル レイヤーを追加する
+      url: map-add-bubble-layer-android.md
+    - text: シンボル レイヤーを追加する
+      url: how-to-add-symbol-to-android-map.md
+    - text: 線レイヤーを追加する
+      url: android-map-add-line-layer.md
+    - text: 多角形レイヤーを追加する
+      url: how-to-add-shapes-to-android-map.md
+    - text: データドリブンのスタイルの式を使用する
+      url: data-driven-style-expressions-android-sdk.md
     - text: マップにタイル レイヤーを追加する
       url: how-to-add-tile-layer-android-map.md
     - text: マップに図形を追加する
