--- a/articles/defender-for-iot/TOC.yml
+++ b/articles/defender-for-iot/TOC.yml
@@ -5,135 +5,233 @@
   items:
     - name: ソリューションのアーキテクチャ
       href: architecture.md
-    - name: Azure RTOS 用のセキュリティ モジュール
-      href: iot-security-azure-rtos.md
-    - name: セキュリティ エージェント
-      href: security-agent-architecture.md
-    - name: Edge のセキュリティ モジュール
-      href: security-edge-architecture.md
-    - name: サービスの前提条件
-      href: service-prerequisites.md
-    - name: Azure Defender for IoT を使用した作業の開始
-      href: getting-started.md
-      items:
-        - name: IoT Hub
-          href: iot-hub-integration.md
-        - name: セキュリティ エージェント
-          href: security-agents.md
 - name: クイックスタート
   expanded: true
   items:
-    - name: ネットワークを準備する
-      href: quickstart-prepare-network-for-defender-for-iot.md
-    - name: センサーをオンボードする
-      href: quickstart-onboard-sensors.md
-    - name: Azure RTOS 用のセキュリティ モジュールを構成する
-      href: quickstart-azure-rtos-security-module.md
-    - name: Azure Defender for IoT を IoT Hub にオンボードする
-      href: quickstart-onboard-iot-hub.md
-    - name: ソリューションを構成する
-      href: quickstart-configure-your-solution.md
-    - name: Azure Defender for IoT のモジュール ツインを作成する
-      href: quickstart-create-security-twin.md
-    - name: セキュリティに関する推奨事項の調査
-      href: quickstart-investigate-security-recommendations.md
-    - name: カスタムのセキュリティのアラートを作成する
-      href: quickstart-create-custom-alerts.md
-    - name: セキュリティ アラートについて調査する
-      href: quickstart-investigate-security-alerts.md
+    - name: 組織向けのエージェントレス ソリューション
+      items:
+        - name: システムの前提条件
+          href: quickstart-system-prerequisites.md
+        - name: Azure Defender for IoT を使用した作業の開始
+          href: getting-started.md
+    - name: デバイス ビルダー向けのエージェントベースのソリューション
+      items:
+        - name: Azure RTOS 用のセキュリティ モジュールを構成する
+          href: quickstart-azure-rtos-security-module.md
+        - name: IoT Hub
+          href: quickstart-iot-hub-integration.md
+        - name: Azure Defender for IoT を IoT Hub にオンボードする
+          href: quickstart-onboard-iot-hub.md
+        - name: セキュリティ エージェント
+          href: security-agent-architecture.md
+        - name: ソリューションを構成する
+          href: quickstart-configure-your-solution.md
+        - name: Azure Defender for IoT のモジュール ツインを作成する
+          href: quickstart-create-security-twin.md
+        - name: セキュリティに関する推奨事項の調査
+          href: quickstart-investigate-security-recommendations.md
+        - name: カスタムのセキュリティのアラートを作成する
+          href: quickstart-create-custom-alerts.md
+        - name: セキュリティ アラートについて調査する
+          href: quickstart-investigate-security-alerts.md
 - name: 概念
   items:
-    - name: Azure RTOS 用のセキュリティ モジュール
+    - name: 組織向けのエージェントレス ソリューション
       items:
-        - name: Azure RTOS 用のセキュリティ モジュールについて
-          href: concept-rtos-security-module.md
-        - name: Azure RTOS 用のセキュリティ モジュールのアラートと推奨事項
-          href: concept-rtos-security-alerts-recommendations.md
-    - name: セキュリティ エージェントの認証
-      href: concept-security-agent-authentication-methods.md
-    - name: セキュリティ モジュール
-      href: concept-security-module.md
-    - name: セキュリティのアラート
-      href: concept-security-alerts.md
-    - name: カスタマイズ可能なセキュリティ アラート
-      href: concept-customizable-security-alerts.md
-    - name: セキュリティ
+        - name: 主要な概念
+          href: concept-key-concepts.md
+    - name: デバイス ビルダー向けのエージェントベースのソリューション
       items:
-        - name: セキュリティに関する推奨事項
-          href: concept-recommendations.md
-        - name: セキュリティ ベースライン
-          href: security-baseline.md
-    - name: ベースライン
-      href: concept-baseline.md
-    - name: イベントの集計
-      href: event-aggregation.md
-    - name: 価格と関連コスト
-      href: concept-pricing.md
+        - name: Azure RTOS 用のセキュリティ モジュール
+          href: iot-security-azure-rtos.md
+          items:
+            - name: Azure RTOS 用のセキュリティ モジュールについて
+              href: concept-rtos-security-module.md
+            - name: Azure RTOS 用のセキュリティ モジュールのアラートと推奨事項
+              href: concept-rtos-security-alerts-recommendations.md
+        - name: Edge のセキュリティ モジュール
+          href: security-edge-architecture.md
+        - name: セキュリティ エージェント
+          href: overview-security-agents.md
+        - name: セキュリティ エージェントの認証
+          href: concept-security-agent-authentication-methods.md
+        - name: セキュリティ モジュール
+          href: concept-security-module.md
+        - name: セキュリティのアラート
+          href: concept-security-alerts.md
+        - name: カスタマイズ可能なセキュリティ アラート
+          href: concept-customizable-security-alerts.md
+        - name: セキュリティ
+          items:
+            - name: セキュリティに関する推奨事項
+              href: concept-recommendations.md
+            - name: セキュリティ ベースライン
+              href: security-baseline.md
+        - name: ベースライン
+          href: concept-baseline.md
+        - name: イベントの集計
+          href: event-aggregation.md
+        - name: 価格と関連コスト
+          href: concept-pricing.md
 - name: 操作方法ガイド
   items:
-    - name: センサーの表示と管理
-      href: how-to-deploy-view-sensors.md
-    - name: オンプレミスの管理コンソールをデプロイする
-      href: how-to-deploy-management-console-appliance.md
-    - name: Azure RTOS 用のセキュリティ モジュールを操作する
-      href: how-to-azure-rtos-security-module.md
-    - name: デプロイが推奨されるエージェント
+    - name: 組織向けのエージェントレス ソリューション
       items:
-        - name: デプロイするエージェントを選択する
-          href: how-to-deploy-agent.md
-        - name: C# ベースのセキュリティ エージェントを Windows デバイスにデプロイする
-          href: how-to-deploy-windows-cs.md
-        - name: C# ベースのセキュリティ エージェントを Linux デバイスにデプロイする
-          href: how-to-deploy-linux-cs.md
-        - name: C ベースのセキュリティ エージェントを Linux デバイスにデプロイする
-          href: how-to-deploy-linux-c.md
-    - name: セキュリティ エージェントのトラブルシューティングを行う
+        - name: ネットワークを準備する
+          items:
+            - name: 必要なアプライアンスを特定する
+              href: how-to-identify-required-appliances.md
+            - name: ソフトウェアをインストールする
+              href: how-to-install-software.md
+            - name: ネットワークをセットアップする
+              href: how-to-set-up-your-network.md
+        - name: センサーを準備する
+          items:
+            - name: センサーをオンボードする
+              href: how-to-manage-sensors-on-the-cloud.md
+            - name: センサーをアクティブにしてセットアップする
+              href: how-to-activate-and-set-up-your-sensor.md
+        - name: オンプレミス管理コンソールを準備する
+          items:
+            - name: オンプレミス管理コンソールをアクティブにしてセットアップする
+              href: how-to-activate-and-set-up-your-on-premises-management-console.md
+            - name: 高可用性のセットアップ
+              href: how-to-set-up-high-availability.md
+        - name: ユーザーとユーザー アクセスの管理
+          items:
+            - name: ユーザーの作成と管理
+              href: how-to-create-and-manage-users.md
+            - name: グローバル ユーザー アクセス制御の定義
+              href: how-to-define-global-user-access-control.md
+        - name: 監視するトラフィックを制御する
+          href: how-to-control-what-traffic-is-monitored.md
+        - name: オンプレミス管理コンソールからセンサーを管理する
+          href: how-to-manage-sensors-from-the-on-premises-management-console.md
+        - name: 個々のセンサーの管理
+          href: how-to-manage-individual-sensors.md
+        - name: クラウドでセンサーを管理する
+          href: how-to-manage-sensors-on-the-cloud.md
+        - name: オンプレミスの管理コンソールを管理する
+          href: how-to-manage-the-on-premises-management-console.md
+        - name: 脅威インテリジェンス パッケージを操作する
+          href: how-to-work-with-threat-intelligence-packages.md
+        - name: デバイスのインベントリ情報を操作する
+          items:
+            - name: デバイス インベントリのすべてのエンタープライズ センサー検出を調査する
+              href: how-to-investigate-all-enterprise-sensor-detections-in-a-device-inventory.md
+            - name: デバイス インベントリのセンサー検出を調査する
+              href: how-to-investigate-sensor-detections-in-a-device-inventory.md
+        - name: センサー デバイス マップを操作する
+          href: how-to-work-with-the-sensor-device-map.md
+        - name: センサーによって検出されたアラートを操作する
+          items:
+            - name: センサーでのアラートの操作
+              href: how-to-work-with-alerts-on-your-sensor.md
+            - name: アラートの表示
+              href: how-to-view-alerts.md
+            - name: アラートで提供される情報の表示
+              href: how-to-view-information-provided-in-alerts.md
+            - name: アラート イベントの管理
+              href: how-to-manage-the-alert-event.md
+            - name: アラート インシデント対応を高速化する
+              href: how-to-accelerate-alert-incident-response.md
+            - name: アラート情報を転送する
+              href: how-to-forward-alert-information-to-partners.md
+        - name: グローバル、地域、ローカルの脅威に関する分析情報を得る
+          href: how-to-gain-insight-into-global-regional-and-local-threats.md
+        - name: オンプレミス管理コンソールをでアラートを操作する
+          href: how-to-work-with-alerts-on-premises-management-console.md
+        - name: デバイス情報を強化する
+          items:
+            - name: デバイス通知を操作する
+              href: how-to-work-with-device-notifications.md
+            - name: ポートと VLAN の名前解決を強化する
+              href: how-to-enhance-port-and-vlan-name-resolution.md
+            - name: デバイス情報をインポートする
+              href: how-to-import-device-information.md
+        - name: センサー アクティビティを追跡する
+          href: how-to-track-sensor-activity.md
+        - name: レポートの生成
+          href: how-to-generate-reports.md
+        - name: センサーとオンプレミスの管理コンソールのトラブルシューティング
+          href: how-to-troubleshoot-the-sensor-and-on-premises-management-console.md
+        - name: SNMP MIB の監視を設定する
+          href: how-to-set-up-snmp-mib-monitoring.md
+    - name: デバイス ビルダー向けのエージェントベースのソリューション
       items:
-        - name: Azure Defender for IoT の Linux セキュリティ エージェントのトラブルシューティングを行う
-          href: troubleshoot-agent.md
-        - name: ローカル構成 C
-          href: azure-iot-security-local-configuration-c.md
-        - name: ローカル構成 C#
-          href: azure-iot-security-local-configuration-csharp.md
-    - name: Edge のセキュリティ モジュールをデプロイする
-      href: how-to-deploy-edge.md
-    - name: セキュリティ エージェントを構成する
-      href: how-to-agent-configuration.md
-    - name: 独自のセキュリティ メッセージを送信する
-      href: how-to-send-security-messages.md
-    - name: 未加工のセキュリティ データにアクセスする
-      href: how-to-security-data-access.md
-    - name: デバイスを調査する
-      href: how-to-investigate-device.md
-    - name: Azure Sentinel に接続する
-      href: how-to-configure-with-sentinel.md
-    - name: エージェントをカスタマイズする
-      href: how-to-customize-solution.md
+        - name: Azure RTOS 用のセキュリティ モジュールを操作する
+          href: how-to-azure-rtos-security-module.md
+        - name: デプロイが推奨されるエージェント
+          items:
+            - name: デプロイするエージェントを選択する
+              href: how-to-deploy-agent.md
+            - name: C# ベースのセキュリティ エージェントを Windows デバイスにデプロイする
+              href: how-to-deploy-windows-cs.md
+            - name: C# ベースのセキュリティ エージェントを Linux デバイスにデプロイする
+              href: how-to-deploy-linux-cs.md
+            - name: C ベースのセキュリティ エージェントを Linux デバイスにデプロイする
+              href: how-to-deploy-linux-c.md
+        - name: セキュリティ エージェントのトラブルシューティングを行う
+          items:
+            - name: Azure Defender for IoT の Linux セキュリティ エージェントのトラブルシューティングを行う
+              href: troubleshoot-agent.md
+            - name: ローカル構成 C
+              href: azure-iot-security-local-configuration-c.md
+            - name: ローカル構成 C#
+              href: azure-iot-security-local-configuration-csharp.md
+        - name: Edge のセキュリティ モジュールをデプロイする
+          href: how-to-deploy-edge.md
+        - name: セキュリティ エージェントを構成する
+          href: how-to-agent-configuration.md
+        - name: 独自のセキュリティ メッセージを送信する
+          href: how-to-send-security-messages.md
+        - name: 未加工のセキュリティ データにアクセスする
+          href: how-to-security-data-access.md
+        - name: デバイスを調査する
+          href: how-to-investigate-device.md
+        - name: Azure Sentinel に接続する
+          href: how-to-configure-with-sentinel.md
+        - name: エージェントをカスタマイズする
+          href: how-to-customize-solution.md
 - name: 関連項目
   items:
-    - name: Azure RTOS 用のセキュリティ モジュール API
-      href: azure-rtos-security-module-api.md
-    - name: よく寄せられる質問 - サービス
-      href: resources-frequently-asked-questions.md
-    - name: よく寄せられる質問 - エージェント
-      href: resources-agent-frequently-asked-questions.md
-    - name: Azure のロードマップ
-      href: 'https://azure.microsoft.com/roadmap/?category=security-identity'
+    - name: 組織向けのエージェントレス ソリューション
+      items:
+        - name: Defender for IoT の API を操作する
+          href: references-work-with-defender-for-iot-apis.md
+        - name: Defender for IoT の CLI コマンドを操作する
+          href: references-work-with-defender-for-iot-cli-commands.md
+        - name: 独自のプロトコルを管理する (Horizon)
+          href: resources-manage-proprietary-protocols.md
+        - name: Defender for IoT の用語集
+          href: references-defender-for-iot-glossary.md
+    - name: デバイス ビルダー向けのエージェントベースのソリューション
+      items:
+        - name: Azure RTOS 用のセキュリティ モジュール API
+          href: azure-rtos-security-module-api.md
+        - name: よく寄せられる質問 - サービス
+          href: resources-frequently-asked-questions.md
+        - name: よく寄せられる質問 - エージェント
+          href: resources-agent-frequently-asked-questions.md
+        - name: Azure のロードマップ
+          href: 'https://azure.microsoft.com/roadmap/?category=security-identity'
 - name: リソース
   items:
-    - name: Microsoft Learn でセキュリティ スキルを身に付ける
-      href: /learn/browse/?term=securityS&terms=securityS
-    - name: Azure Security Center のドキュメント
-      href: ../security-center/index.yml
-    - name: Azure のセキュリティのドキュメント
-      href: ../security/index.yml
-    - name: Stack Overflow の Azure RTOS セキュリティ モジュール
-      href: 'https://stackoverflow.com/questions/tagged/azure-rtos+azure-iot-security-module'
-    - name: Azure IoT のセキュリティ、プライバシー、コンプライアンスのブログ
-      href: 'https://techcommunity.microsoft.com/t5/iot-security/bd-p/IoTSecurity'
-    - name: リージョン別の提供状況
-      href: 'https://azure.microsoft.com/regions/services/'
-    - name: 価格
-      href: 'https://azure.microsoft.com/pricing/details/security-center/'
-    - name: ビデオ
-      href: 'https://azure.microsoft.com/resources/videos/index/?services=security-center&service=internet-of-things&page=1&sort=newest'
+    - name: デバイス ビルダー向けのエージェントベースのソリューション
+      items:
+        - name: Microsoft Learn でセキュリティ スキルを身に付ける
+          href: /learn/browse/?term=securityS&terms=securityS
+        - name: Azure Security Center のドキュメント
+          href: ../security-center/
+        - name: Azure のセキュリティのドキュメント
+          href: 'https://docs.microsoft.com/azure/security/'
+        - name: Stack Overflow の Azure RTOS セキュリティ モジュール
+          href: 'https://stackoverflow.com/questions/tagged/azure-rtos+azure-iot-security-module'
+        - name: Azure IoT のセキュリティ、プライバシー、コンプライアンスのブログ
+          href: 'https://techcommunity.microsoft.com/t5/iot-security/bd-p/IoTSecurity'
+        - name: リージョン別の提供状況
+          href: 'https://azure.microsoft.com/regions/services/'
+        - name: 価格
+          href: 'https://azure.microsoft.com/pricing/details/security-center/'
+        - name: ビデオ
+          href: 'https://azure.microsoft.com/resources/videos/index/?services=security-center&service=internet-of-things&page=1&sort=newest'
