--- a/articles/cognitive-services/Custom-Vision-Service/index.yml
+++ b/articles/cognitive-services/Custom-Vision-Service/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: PatrickFarley
   ms.author: pafarley
   ms.date: 09/05/2019
-  ms.openlocfilehash: 8afce226ab25f066e2f845733d67e9159ad67f56
-  ms.sourcegitcommit: 9706bee6962f673f14c2dc9366fde59012549649
+  ms.openlocfilehash: 9b88397f6ed507f2685bcd293ba16e55a6836f28
+  ms.sourcegitcommit: 1140ff2b0424633e6e10797f6654359947038b8d
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/13/2020
-  ms.locfileid: "94616809"
+  ms.lasthandoff: 12/30/2020
+  ms.locfileid: "97813158"
 landingContent:
 - title: Custom Vision について
   linkLists:
@@ -38,7 +38,7 @@ landingContent:
     links:
     - text: Web ポータルの使用
       url: getting-started-build-a-classifier.md
-    - text: Custom Vision SDK の使用
+    - text: Custom Vision SDK または REST API の使用
       url: quickstarts/image-classification.md
   - linkListType: how-to-guide
     links:
