--- a/articles/cognitive-services/form-recognizer/toc.yml
+++ b/articles/cognitive-services/form-recognizer/toc.yml
@@ -7,45 +7,13 @@
       href: overview.md
     - name: 新機能
       href: whats-new.md
-- name: クイックスタート
+- name: Form Recognizer の概要
   expaned: true
   items:
-    - name: クライアント ライブラリの使用
+    - name: クライアント ライブラリまたは REST API を使用する
       href: quickstarts/client-library.md
     - name: サンプル ラベル付けツールの使用
-      items:
-        - name: ラベルを使用してカスタム モデルをトレーニングする
-          href: quickstarts/label-tool.md
-    - name: REST API の使用
-      items:
-        - name: ラベルを使用しないカスタム モデルのトレーニングと使用
-          items:
-            - name: cURL
-              href: quickstarts/curl-train-extract.md
-            - name: Python
-              href: quickstarts/python-train-extract.md
-        - name: ラベルを使用したカスタム モデルのトレーニングと使用
-          items:
-            - name: Python
-              href: quickstarts/python-labeled-data.md
-        - name: あらかじめ構築されたレシート モデルを使用する
-          items:
-            - name: cURL
-              href: quickstarts/curl-receipts.md
-            - name: Python
-              href: quickstarts/python-receipts.md
-        - name: あらかじめ構築された名刺モデルを使用する
-          items:
-            - name: Python
-              href: quickstarts/python-business-cards.md
-        - name: あらかじめ構築された請求書モデルを使用する
-          items:
-            - name: Python
-              href: quickstarts/python-invoices.md
-        - name: テキスト レイアウト情報を取得する
-          items:
-            - name: Python
-              href: quickstarts/python-layout.md
+      href: quickstarts/label-tool.md
 - name: チュートリアル
   items:
     - name: Cognitive Search で Form Recognizer を使用する
@@ -77,7 +45,8 @@
           href: form-recognizer-container-configuration.md
           displayName: 'docker, container, run, billing, apikey, logging'
         - name: Container Instances の使用
-          href: deploy-form-recognizer-on-container-instances.md
+          maintainContext: true
+          href: ../containers/azure-container-instance-recipe.md
         - name: Cognitive Services コンテナーのドキュメント
           href: ../containers/index.yml
     - name: モデルのバックアップと復旧
