--- a/articles/cognitive-services/Computer-vision/toc.yml
+++ b/articles/cognitive-services/Computer-vision/toc.yml
@@ -139,7 +139,7 @@
         - name: 画像処理アプリの探索
           href: Tutorials/CSharpTutorial.md
         - name: Computer Vision の他のサンプル
-          href: 'https://azure.microsoft.com/resources/samples/?service=cognitive-services&term=vision'
+          href: 'https://docs.microsoft.com/samples/browse/?products=azure&terms=computer-vision'
     - name: よく寄せられる質問
       href: FAQ.md
     - name: カテゴリの分類
