--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -408,8 +408,8 @@
           displayName: 'log, monitor, deploy, metrics, databricks'
           href: how-to-use-mlflow-azure-databricks.md
         - name: MLflow モデルのデプロイ
-          displayName: 'log, monitor, deploy, metrics, databricks'
-          href: how-to-deploy-models-with-mlflow.md
+          displayName: 'log, monitor, deploy, metrics, databricks, aci, aks'
+          href: how-to-deploy-mlflow-models.md
     - name: 自動化された機械学習
       displayName: 'automl, auto ml'
       items:
