--- a/articles/event-hubs/TOC.yml
+++ b/articles/event-hubs/TOC.yml
@@ -275,26 +275,14 @@
           href: /java/api/com.microsoft.azure.management.eventhub?view=azure-java-stable
     - name: Python
       items:
-        - name: azure-eventhub バージョン 1 からバージョン 5 への移行
-          href: 'https://github.com/Azure/azure-sdk-for-python/blob/master/sdk/eventhub/azure-eventhub/migration_guide.md'
         - name: クライアント ライブラリ
-          items:
-            - name: azure-eventhub バージョン 5
-              href: /python/api/azure-eventhub/?view=azure-python
-            - name: azure-eventhub バージョン 1
-              href: /python/api/azure-eventhub/?view=azure-python-previous
+          href: /python/api/overview/azure/eventhub-readme?view=azure-python
         - name: 管理ライブラリ
           href: /python/api/overview/azure/event-hub?view=azure-python
     - name: JavaScript
       items:
-        - name: azure/eventhubs バージョン 2 からバージョン 5 への移行
-          href: 'https://github.com/Azure/azure-sdk-for-js/blob/master/sdk/eventhub/event-hubs/migrationguide.md'
         - name: クライアント ライブラリ
-          items:
-            - name: azure/eventhubs バージョン 5
-              href: /javascript/api/@azure/event-hubs/?view=azure-node-latest
-            - name: azure/eventhubs バージョン 2
-              href: /javascript/api/@azure/event-hubs/?view=azure-node-legacy
+          href: /javascript/api/overview/azure/event-hubs-readme?view=azure-node-latest
         - name: 管理ライブラリ
           href: /javascript/api/@azure/arm-eventhub/?view=azure-node-latest
     - name: Go
