--- a/articles/key-vault/general/index.yml
+++ b/articles/key-vault/general/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: mbaldwin
   manager: rkarlin
   ms.date: 09/19/2019
-  ms.openlocfilehash: 080cf9d8b7816b28f299396de2fe147fc2f9b27e
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 1d0fdf9042ccbe2ab433db2f861b6d4e58e7a1c3
+  ms.sourcegitcommit: 2aa52d30e7b733616d6d92633436e499fbe8b069
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "89378884"
+  ms.lasthandoff: 01/06/2021
+  ms.locfileid: "97935922"
 landingContent:
 - title: Azure Key Vault について
   linkLists:
@@ -48,10 +48,10 @@ landingContent:
   linkLists:
   - linkListType: overview
     links:
+    - text: セキュリティの概要
+      url: security-overview.md
     - text: キー コンテナーをセキュリティで保護する
       url: secure-your-key-vault.md
-    - text: セキュリティに関する推奨事項
-      url: security-recommendations.md
     - text: セキュリティ ベースライン
       url: security-baseline.md
   - linkListType: how-to-guide
