--- a/articles/networking/TOC.yml
+++ b/articles/networking/TOC.yml
@@ -51,6 +51,11 @@
               href: azure-network-latency.md
             - name: Azure でのインターネット ルーティング設定
               href: ../virtual-network/routing-preference-overview.md
+        - name: セキュリティ
+          items:
+            - name: Azure Policy によるセキュリティ制御
+              displayName: 'regulatory, compliance, standards, domains'
+              href: ./security-controls-policy.md
         - name: 仮想ネットワーク
           href: ../virtual-network/virtual-networks-overview.md?toc=%2fazure%2fnetworking%2ftoc.json
         - name: ネットワークの負荷分散
@@ -135,6 +140,9 @@
       href: 'https://azure.microsoft.com/develop/nodejs/#azure-sdk'
     - name: REST
       href: 'https://msdn.microsoft.com/library/mt163658.aspx'
+    - name: Azure Policy の組み込み
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: リソース
   items:
     - name: テンプレートの作成
