--- a/articles/blockchain/workbench/index.yml
+++ b/articles/blockchain/workbench/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: PatAltimore
   ms.author: patricka
   ms.date: 09/05/2019
-  ms.openlocfilehash: 2dda68b1f8fff25759ff250646747f1faf63beb4
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: d94f01abdf3b2853e892925d5a19ec5468fd26f0
+  ms.sourcegitcommit: f6f928180504444470af713c32e7df667c17ac20
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "74324638"
+  ms.lasthandoff: 01/07/2021
+  ms.locfileid: "97964475"
 landingContent:
 - title: Azure Blockchain Workbench について
   linkLists:
@@ -31,8 +31,14 @@ landingContent:
     links:
     - text: Azure Blockchain Workbench の概要
       url: https://channel9.msdn.com/Shows/Blocktalk/Introduction-to-Azure-Blockchain-Workbench
-- title: 作業開始
+- title: はじめに
   linkLists:
+  - linkListType: learn
+    links:
+    - text: Microsoft Learn ブロックチェーン パスに従う
+      url: /learn/paths/ethereum-blockchain-development
+    - text: 初心者向けブロックチェーン シリーズを見る
+      url: https://channel9.msdn.com/Series/Beginners-Series-to-Blockchain
   - linkListType: deploy
     links:
     - text: Azure Blockchain Workbench を展開する
