--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -43,24 +43,20 @@
   items:
     - name: 基本的な概念
       href: basic-concepts.md
-    - name: セキュリティ
+    - name: Security
       items:
+        - name: セキュリティの概要
+          href: security-overview.md
+        - name: キー コンテナーへのアクセスをセキュリティで保護する
+          href: secure-your-key-vault.md
         - name: Key Vault 認証の基礎
           href: authentication-fundamentals.md
-        - name: Azure Key Vault セキュリティ
-          href: overview-security.md
-        - name: Key Vault を使用するためのベスト プラクティス - Azure Key Vault
-          href: best-practices.md
-        - name: Azure Key Vault セキュリティ ワールド
+        - name: セキュリティ ワールドと地理的境界
           href: overview-security-worlds.md
         - name: ネットワークのセキュリティ
           href: network-security.md
-        - name: キー コンテナーへのアクセスをセキュリティで保護する - Azure Key Vault
-          href: secure-your-key-vault.md
         - name: Key Vault 用の Azure セキュリティ ベースライン
           href: security-baseline.md
-        - name: Azure Key Vault のセキュリティに関する推奨事項
-          href: security-recommendations.md
         - name: Azure Policy によるセキュリティ制御
           displayName: 'regulatory, compliance, standards, domains'
           href: ../security-controls-policy.md?toc=/azure/key-vault/general/toc.json&bc=/azure/key-vault/breadcrumb/toc.json
@@ -82,7 +78,7 @@
       href: overview-throttling.md
     - name: Azure Key Vault の可用性と冗長性
       href: disaster-recovery-guidance.md
-    - name: Azure Key Vault の仮想ネットワーク サービス エンドポイント - Azure Key Vault
+    - name: Azure Key Vault の仮想ネットワーク サービス エンドポイント
       href: overview-vnet-service-endpoints.md
 - name: 操作方法ガイド
   items:
@@ -154,9 +150,9 @@
       href: whats-new.md
     - name: クライアント ライブラリ
       href: client-libraries.md
-    - name: REST API のエラー コード - Azure Key Vault
+    - name: REST API のエラー コード
       href: rest-error-codes.md
-    - name: 一般的なエラー コード - Azure Key Vault
+    - name: 一般的なエラー コード
       href: common-error-codes.md
     - name: 一般的なパラメーターとヘッダー
       href: common-parameters-and-headers.md
