commit translated contents

--- a/articles/stream-analytics/index.yml
+++ b/articles/stream-analytics/index.yml
@@ -7,15 +7,15 @@ metadata:
   services: service
   ms.service: stream-analytics
   ms.topic: landing-page
-  author: mamccrea
-  ms.author: mamccrea
+  author: sidram
+  ms.author: sidram
   ms.date: 09/16/2019
-  ms.openlocfilehash: 15383360fcea2625ff93fd61d7ab74ac873ed866
-  ms.sourcegitcommit: e0ec3c06206ebd79195d12009fd21349de4a995d
+  ms.openlocfilehash: 2567279bd2c22a2b6f0ff7bf5203efcce56b2466
+  ms.sourcegitcommit: 42a4d0e8fa84609bec0f6c241abe1c20036b9575
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/18/2020
-  ms.locfileid: "97683507"
+  ms.lasthandoff: 01/08/2021
+  ms.locfileid: "98015574"
 landingContent:
 - title: Azure Stream Analytics について
   linkLists:
