--- a/articles/key-vault/keys/index.yml
+++ b/articles/key-vault/keys/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 04/07/2020
-  ms.openlocfilehash: 0acfc87af9d833724d5222fcb1794d0dc37628aa
-  ms.sourcegitcommit: 2aa52d30e7b733616d6d92633436e499fbe8b069
+  ms.openlocfilehash: d3be7d18f55400cf5f9bf85c6fcb767bee05044f
+  ms.sourcegitcommit: e46f9981626751f129926a2dae327a729228216e
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/06/2021
-  ms.locfileid: "97935310"
+  ms.lasthandoff: 01/08/2021
+  ms.locfileid: "98028439"
 landingContent:
 - title: '[キー]'
   linkLists:
@@ -36,8 +36,16 @@ landingContent:
       url: quick-create-powershell.md
     - text: ポータル
       url: quick-create-portal.md
+    - text: .NET
+      url: quick-create-net.md
     - text: Python
       url: quick-create-python.md
+    - text: Node.js
+      url: quick-create-node.md
+    - text: Java
+      url: quick-create-java.md
+    - text: Template
+      url: quick-create-template.md
 - title: チュートリアル
   linkLists:
   - linkListType: tutorial
