--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -131,6 +131,7 @@
           href: add-profile-editing-policy.md
         - name: リソース所有者のパスワード資格情報ポリシー
           href: add-ropc-policy.md
+          displayName: ROPC
         - name: セルフサービス パスワードのリセット ポリシーの設定 (非推奨)
           href: user-flow-self-service-password-reset.md
         - name: 電話でのサインアップとサインイン
@@ -163,6 +164,8 @@
           href: identity-provider-microsoft-account.md
         - name: QQ
           href: identity-provider-qq.md
+        - name: Salesforce
+          href: identity-provider-salesforce.md
         - name: Salesforce (SAML)
           href: identity-provider-salesforce-saml.md
         - name: Twitter
