--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -49,6 +49,8 @@
               href: how-to-set-up-instance-portal.md
             - name: CLI のバージョン
               href: how-to-set-up-instance-cli.md
+            - name: PowerShell バージョン
+              href: how-to-set-up-instance-powershell.md
             - name: スクリプト化バージョン
               href: how-to-set-up-instance-scripted.md
         - name: アプリ認証コードを作成する
