--- a/articles/governance/index.yml
+++ b/articles/governance/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: DCtheGeek
   ms.author: dacoulte
   ms.date: 10/20/2020
-  ms.openlocfilehash: c3a70e38b870d11d7a12e438d3a0390c23df20bd
-  ms.sourcegitcommit: ce8eecb3e966c08ae368fafb69eaeb00e76da57e
+  ms.openlocfilehash: 5dce232111e6f244fd56f19f5913737b5da67682
+  ms.sourcegitcommit: c4c554db636f829d7abe70e2c433d27281b35183
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/21/2020
-  ms.locfileid: "92317730"
+  ms.lasthandoff: 01/08/2021
+  ms.locfileid: "98035021"
 highlightedContent:
   items:
   - title: ガバナンスの概要
@@ -124,10 +124,10 @@ additionalContent:
       - text: Azure CLI
         url: /cli/azure/policy
       - text: Azure PowerShell
-        url: /powershell/module/az.resources/#policies
+        url: /powershell/module/az.resources/#policy
         note: (ポリシー)
       - text: Azure PowerShell
-        url: /powershell/module/az.policyinsights#policy_insights
+        url: /powershell/module/az.policyinsights#policy-insights
         note: (ポリシーの分析情報)
       - text: Azure PowerShell
         url: https://www.powershellgallery.com/packages/Az.GuestConfiguration
@@ -188,7 +188,7 @@ additionalContent:
       - text: Azure CLI
         url: /cli/azure/ext/resource-graph/graph
       - text: Azure PowerShell
-        url: /powershell/module/az.resourcegraph/
+        url: /powershell/module/az.resourcegraph/#resourcegraph
       - text: Azure SDK for .NET
         url: /dotnet/api/Microsoft.Azure.Management.ResourceGraph
       - text: Azure SDK for .NET
