--- a/articles/load-balancer/index.yml
+++ b/articles/load-balancer/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: asudbring
   ms.author: allensu
   ms.date: 05/07/2020
-  ms.openlocfilehash: 87f9328745484d3f9643e3fd297fd2bf07b00a43
-  ms.sourcegitcommit: e2dc549424fb2c10fcbb92b499b960677d67a8dd
+  ms.openlocfilehash: de8b6cba87d0297841f4e6236ee69d4f6a856eb4
+  ms.sourcegitcommit: e46f9981626751f129926a2dae327a729228216e
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/17/2020
-  ms.locfileid: "94695573"
+  ms.lasthandoff: 01/08/2021
+  ms.locfileid: "98027878"
 landingContent:
 - title: Load Balancer について
   linkLists:
@@ -96,6 +96,10 @@ landingContent:
       url: load-balancer-common-deployment-errors.md
     - text: 送信接続に関する一般的な問題の解決
       url: troubleshoot-outbound-connection.md
+    - text: 正常性プローブの状態の問題
+      url: load-balancer-troubleshoot-health-probe-status.md
+    - text: バックエンド プール (VM) のトラフィック
+      url: load-balancer-troubleshoot-backend-traffic.md
   - linkListType: video
     links:
     - text: Azure Load Balancer を使用して高可用性アプリを構築および監視する
