--- a/articles/active-directory/fundamentals/toc.yml
+++ b/articles/active-directory/fundamentals/toc.yml
@@ -25,7 +25,7 @@
   items:
     - name: セキュリティ
       items:
-        - name: リソースへの外部アクセスをセキュリティで保護する
+        - name: セキュリティで保護された外部コラボレーション
           items:
             - name: セキュリティで保護された外部アクセスの概要
               href: secure-external-access-resources.md
@@ -47,6 +47,8 @@
               href: 8-secure-access-sensitivity-labels.md
             - name: 9 Teams、SharePoint、OneDrive へのアクセスをセキュリティで保護する
               href: 9-secure-access-teams-sharepoint.md
+        - name: オンプレミスの攻撃から Microsoft 365 を保護する
+          href: protect-m365-from-on-premises-attacks.md
         - name: MFA の有効化
           href: concept-fundamentals-mfa-get-started.md
         - name: セキュリティの既定値群
