--- a/articles/attestation/toc.yml
+++ b/articles/attestation/toc.yml
@@ -15,6 +15,8 @@
   items:
     - name: 構成証明ポリシーの作成
       href: author-sign-policy.md
+    - name: プライベート エンドポイントの作成 - PowerShell
+      href: private-endpoint-powershell.md
     - name: SGX 構成証明コード サンプル
       href: /samples/browse/?expanded=azure&terms=attestation
 - name: 例
