commit translated contents

--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -102,6 +102,8 @@
   items:
     - name: App Service プラン
       href: overview-hosting-plans.md
+    - name: コスト管理
+      href: overview-manage-costs.md
     - name: OS 機能
       href: operating-system-functionality.md
     - name: デプロイのベスト プラクティス
