--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -114,7 +114,7 @@
           href: manage/mca-understand-pricesheet.md
         - name: Microsoft Partner Agreement の請求書の用語
           href: understand/mpa-invoice-terms.md
-        - name: 更新された個々の課金アカウントに対する変更
+        - name: 更新された従量課金制の課金アカウントに対する変更
           href: understand/mosp-new-customer-experience.md
         - name: Microsoft 顧客契約の請求先アカウント
           href: understand/mca-overview.md
