--- a/articles/guides/developer/TOC.yml
+++ b/articles/guides/developer/TOC.yml
@@ -22,6 +22,8 @@
           href: ../../service-fabric/service-fabric-tutorial-create-dotnet-app.md
         - name: Container Service
           href: /previous-versions/azure/container-service/dcos-swarm/container-service-intro
+        - name: Azure Spring Cloud
+          href: ../../spring-cloud/spring-cloud-quickstart.md
 - name: チュートリアル
   items:
     - name: Web アプリを作成してデプロイする
