--- a/articles/traffic-manager/index.yml
+++ b/articles/traffic-manager/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: duongau
   ms.author: duau
   ms.date: 08/19/2019
-  ms.openlocfilehash: 93aeea3258d5d4206397d3fec02230c32f45bbb5
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: da5a925596eb407dc95109d249862080c9bdc086
+  ms.sourcegitcommit: 0aec60c088f1dcb0f89eaad5faf5f2c815e53bf8
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "89398139"
+  ms.lasthandoff: 01/14/2021
+  ms.locfileid: "98185633"
 landingContent:
 - title: Traffic Manager の概要
   linkLists:
@@ -31,7 +31,7 @@ landingContent:
   - linkListType: learn
     links:
     - text: サービスの可用性とデータの局所性を高める
-      url: https://docs.microsoft.com/learn/modules/distribute-load-with-traffic-manager/
+      url: /learn/modules/distribute-load-with-traffic-manager/
 - title: はじめに
   linkLists:
   - linkListType: quickstart
@@ -85,6 +85,6 @@ landingContent:
   - linkListType: reference
     links:
     - text: Azure PowerShell
-      url: https://docs.microsoft.com/powershell/module/az.trafficmanager/?view=azps-2.5.0
+      url: /powershell/module/az.trafficmanager/?view=azps-2.5.0
     - text: Azure CLI
       url: https://docs.microsoft.com/cli/azure/network/traffic-manager?view=azure-cli-latest
