--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -60,9 +60,15 @@
         - name: ロールの割り当てを追加する手順
           href: role-assignments-steps.md
         - name: ポータル
-          href: role-assignments-portal.md
-        - name: ポータル - ゲスト ユーザー
-          href: role-assignments-external-users.md
+          items:
+            - name: ロールの割り当てを追加または削除する
+              href: role-assignments-portal.md
+            - name: サブスクリプション管理者
+              href: role-assignments-portal-subscription-admin.md
+            - name: マネージド ID
+              href: role-assignments-portal-managed-identity.md
+            - name: 外部のゲスト ユーザー
+              href: role-assignments-external-users.md
         - name: PowerShell
           href: role-assignments-powershell.md
         - name: Azure CLI
