--- a/articles/traffic-manager/toc.yml
+++ b/articles/traffic-manager/toc.yml
@@ -45,7 +45,7 @@
       items:
         - name: Traffic Manager で使用される国/地域の階層
           href: traffic-manager-geographic-regions.md
-    - name: Security
+    - name: セキュリティ
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
@@ -124,7 +124,7 @@
     - name: Python
       href: 'https://azure.github.io/azure-sdk-for-python/trafficmanager.html'
     - name: REST
-      href: 'https://msdn.microsoft.com/library/mt163667.aspx'
+      href: /rest/api/trafficmanager/
     - name: Resource Manager テンプレート
       href: /azure/templates/microsoft.network/trafficmanagerprofiles
 - name: リソース
@@ -134,7 +134,7 @@
     - name: ブログ
       href: 'https://azure.microsoft.com/blog/topics/networking/'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-virtual-network.html'
+      href: /answers/topics/azure-virtual-network.html
     - name: 価格
       href: 'https://azure.microsoft.com/pricing/details/traffic-manager/'
     - name: 料金計算ツール
